feat: mobile bottom bar

--- a/wp-content/themes/desafio-wp/assets/css/scss/style.scss
+++ b/wp-content/themes/desafio-wp/assets/css/scss/style.scss
@@ -21,6 +21,7 @@
 @import '../../../template_parts/banner/style';
 @import '../../../template_parts/movie-card/style';
 @import '../../../template_parts/movies-display/style';
+@import '../../../template_parts/bottom-bar/style';
 
 // Pages
 @import './pages/home';
